@@ -26,73 +26,73 @@
 #include <iomanip>
 UNIVERSALIS__COMPILER__NAMESPACE__BEGIN(psycle)
 	UNIVERSALIS__COMPILER__NAMESPACE__BEGIN(host)
+
 		#define WM_SETMESSAGESTRING 0x0362
 
 		IMPLEMENT_DYNAMIC(CMainFrame, CFrameWnd)
 
 		BEGIN_MESSAGE_MAP(CMainFrame, CFrameWnd)
-		//{{AFX_MSG_MAP(CMainFrame)
-		ON_WM_CREATE()
-		ON_WM_SETFOCUS()
-		ON_BN_CLICKED(IDC_BUTTON1, OnBarButton1)
-		ON_BN_CLICKED(IDC_BUTTON3, OnBpmAddTen)
-		ON_BN_CLICKED(IDC_BUTTON14, OnBpmDecOne)
-		ON_BN_CLICKED(IDC_BUTTON15, OnBpmDecTen)
-		ON_CBN_SELCHANGE(IDC_SSCOMBO2, OnSelchangeSscombo2)
-		ON_CBN_CLOSEUP(IDC_SSCOMBO2, OnCloseupSscombo2)
-		ON_CBN_SELCHANGE(IDC_BAR_COMBOGEN, OnSelchangeBarCombogen)
-		ON_CBN_CLOSEUP(IDC_BAR_COMBOGEN, OnCloseupBarCombogen)
-		ON_CBN_SELCHANGE(IDC_BAR_COMBOINS, OnSelchangeBarComboins)
-		ON_CBN_CLOSEUP(IDC_BAR_COMBOINS, OnCloseupBarComboins)
-		ON_BN_CLICKED(IDC_CLIPBUT, OnClipbut)
-		ON_CBN_SELCHANGE(IDC_TRACKCOMBO, OnSelchangeTrackcombo)
-		ON_CBN_CLOSEUP(IDC_TRACKCOMBO, OnCloseupTrackcombo)
-		ON_COMMAND(ID_PSYHELP, OnPsyhelp)
-		ON_BN_CLICKED(IDC_SAVEWAVE, OnSavewave)
-		ON_BN_CLICKED(IDC_EDITWAVE, OnEditwave)
-		ON_BN_CLICKED(IDC_GEAR_RACK, OnGearRack)
-		ON_BN_CLICKED(IDC_WAVEBUT, OnWavebut)
-		ON_WM_DESTROY()
-		ON_BN_CLICKED(IDC_B_DECGEN, OnBDecgen)
-		ON_BN_CLICKED(IDC_B_INCGEN, OnBIncgen)
-		ON_BN_CLICKED(IDC_B_DECWAV, OnBDecwav)
-		ON_BN_CLICKED(IDC_B_INCWAV, OnBIncwav)
-		ON_WM_CLOSE()
-		ON_LBN_SELCHANGE(IDC_SEQLIST, OnSelchangeSeqlist)
-		ON_LBN_DBLCLK(IDC_SEQLIST, OnDblclkSeqlist)
-		ON_BN_CLICKED(IDC_DECLEN, OnDeclen)
-		ON_BN_CLICKED(IDC_INCLEN, OnInclen)
-		ON_BN_CLICKED(IDC_INCSHORT, OnIncshort)
-		ON_BN_CLICKED(IDC_DECSHORT, OnDecshort)
-		ON_BN_CLICKED(IDC_SEQINS, OnSeqins)
-		ON_BN_CLICKED(IDC_SEQNEW, OnSeqnew)
-		ON_BN_CLICKED(IDC_SEQCUT, OnSeqcut)
-		ON_BN_CLICKED(IDC_SEQCOPY, OnSeqcopy)
-		ON_BN_CLICKED(IDC_SEQPASTE, OnSeqpaste)
-		ON_BN_CLICKED(IDC_SEQDELETE, OnSeqdelete)
-		ON_BN_CLICKED(IDC_SEQDUPLICATE, OnSeqduplicate)
-		ON_WM_ACTIVATE()
-		ON_BN_CLICKED(IDC_DEC_TPB, OnDecTPB)
-		ON_BN_CLICKED(IDC_INC_TPB, OnIncTPB)
-		ON_BN_CLICKED(IDC_FOLLOW, OnFollowSong)
-		ON_BN_CLICKED(IDC_SEQCLR, OnSeqclr)
-		ON_BN_CLICKED(IDC_SEQSRT, OnSeqsort)
-		ON_BN_CLICKED(IDC_MULTICHANNEL_AUDITION, OnMultichannelAudition)
-		ON_BN_CLICKED(IDC_RECORD_NOTEOFF, OnRecordNoteoff)
-		ON_BN_CLICKED(IDC_RECORD_TWEAKS, OnRecordTweaks)
-		ON_CBN_CLOSEUP(IDC_AUXSELECT, OnCloseupAuxselect)
-		ON_CBN_SELCHANGE(IDC_AUXSELECT, OnSelchangeAuxselect)
-		ON_BN_CLICKED(IDC_DECLONG, OnDeclong)
-		ON_BN_CLICKED(IDC_INCLONG, OnInclong)
-		ON_UPDATE_COMMAND_UI(ID_INDICATOR_SEQPOS, OnUpdateIndicatorSeqPos)
-		ON_UPDATE_COMMAND_UI(ID_INDICATOR_PATTERN, OnUpdateIndicatorPattern)
-		ON_UPDATE_COMMAND_UI(ID_INDICATOR_LINE, OnUpdateIndicatorLine)
-		ON_UPDATE_COMMAND_UI(ID_INDICATOR_TIME, OnUpdateIndicatorTime)
-		ON_UPDATE_COMMAND_UI(ID_INDICATOR_EDIT, OnUpdateIndicatorEdit)
-		ON_UPDATE_COMMAND_UI(ID_INDICATOR_FOLLOW, OnUpdateIndicatorFollow)
-		ON_UPDATE_COMMAND_UI(ID_INDICATOR_NOTEOFF, OnUpdateIndicatorNoteoff)
-		ON_UPDATE_COMMAND_UI(ID_INDICATOR_TWEAKS, OnUpdateIndicatorTweaks)
-		ON_UPDATE_COMMAND_UI(ID_INDICATOR_OCTAVE, OnUpdateIndicatorOctave)
+			ON_WM_CREATE()
+			ON_WM_SETFOCUS()
+			ON_BN_CLICKED(IDC_BUTTON1, OnBarButton1)
+			ON_BN_CLICKED(IDC_BUTTON3, OnBpmAddTen)
+			ON_BN_CLICKED(IDC_BUTTON14, OnBpmDecOne)
+			ON_BN_CLICKED(IDC_BUTTON15, OnBpmDecTen)
+			ON_CBN_SELCHANGE(IDC_SSCOMBO2, OnSelchangeSscombo2)
+			ON_CBN_CLOSEUP(IDC_SSCOMBO2, OnCloseupSscombo2)
+			ON_CBN_SELCHANGE(IDC_BAR_COMBOGEN, OnSelchangeBarCombogen)
+			ON_CBN_CLOSEUP(IDC_BAR_COMBOGEN, OnCloseupBarCombogen)
+			ON_CBN_SELCHANGE(IDC_BAR_COMBOINS, OnSelchangeBarComboins)
+			ON_CBN_CLOSEUP(IDC_BAR_COMBOINS, OnCloseupBarComboins)
+			ON_BN_CLICKED(IDC_CLIPBUT, OnClipbut)
+			ON_CBN_SELCHANGE(IDC_TRACKCOMBO, OnSelchangeTrackcombo)
+			ON_CBN_CLOSEUP(IDC_TRACKCOMBO, OnCloseupTrackcombo)
+			ON_COMMAND(ID_PSYHELP, OnPsyhelp)
+			ON_BN_CLICKED(IDC_SAVEWAVE, OnSavewave)
+			ON_BN_CLICKED(IDC_EDITWAVE, OnEditwave)
+			ON_BN_CLICKED(IDC_GEAR_RACK, OnGearRack)
+			ON_BN_CLICKED(IDC_WAVEBUT, OnWavebut)
+			ON_WM_DESTROY()
+			ON_BN_CLICKED(IDC_B_DECGEN, OnBDecgen)
+			ON_BN_CLICKED(IDC_B_INCGEN, OnBIncgen)
+			ON_BN_CLICKED(IDC_B_DECWAV, OnBDecwav)
+			ON_BN_CLICKED(IDC_B_INCWAV, OnBIncwav)
+			ON_WM_CLOSE()
+			ON_LBN_SELCHANGE(IDC_SEQLIST, OnSelchangeSeqlist)
+			ON_LBN_DBLCLK(IDC_SEQLIST, OnDblclkSeqlist)
+			ON_BN_CLICKED(IDC_DECLEN, OnDeclen)
+			ON_BN_CLICKED(IDC_INCLEN, OnInclen)
+			ON_BN_CLICKED(IDC_INCSHORT, OnIncshort)
+			ON_BN_CLICKED(IDC_DECSHORT, OnDecshort)
+			ON_BN_CLICKED(IDC_SEQINS, OnSeqins)
+			ON_BN_CLICKED(IDC_SEQNEW, OnSeqnew)
+			ON_BN_CLICKED(IDC_SEQCUT, OnSeqcut)
+			ON_BN_CLICKED(IDC_SEQCOPY, OnSeqcopy)
+			ON_BN_CLICKED(IDC_SEQPASTE, OnSeqpaste)
+			ON_BN_CLICKED(IDC_SEQDELETE, OnSeqdelete)
+			ON_BN_CLICKED(IDC_SEQDUPLICATE, OnSeqduplicate)
+			ON_WM_ACTIVATE()
+			ON_BN_CLICKED(IDC_DEC_TPB, OnDecTPB)
+			ON_BN_CLICKED(IDC_INC_TPB, OnIncTPB)
+			ON_BN_CLICKED(IDC_FOLLOW, OnFollowSong)
+			ON_BN_CLICKED(IDC_SEQCLR, OnSeqclr)
+			ON_BN_CLICKED(IDC_SEQSRT, OnSeqsort)
+			ON_BN_CLICKED(IDC_MULTICHANNEL_AUDITION, OnMultichannelAudition)
+			ON_BN_CLICKED(IDC_RECORD_NOTEOFF, OnRecordNoteoff)
+			ON_BN_CLICKED(IDC_RECORD_TWEAKS, OnRecordTweaks)
+			ON_CBN_CLOSEUP(IDC_AUXSELECT, OnCloseupAuxselect)
+			ON_CBN_SELCHANGE(IDC_AUXSELECT, OnSelchangeAuxselect)
+			ON_BN_CLICKED(IDC_DECLONG, OnDeclong)
+			ON_BN_CLICKED(IDC_INCLONG, OnInclong)
+			ON_UPDATE_COMMAND_UI(ID_INDICATOR_SEQPOS, OnUpdateIndicatorSeqPos)
+			ON_UPDATE_COMMAND_UI(ID_INDICATOR_PATTERN, OnUpdateIndicatorPattern)
+			ON_UPDATE_COMMAND_UI(ID_INDICATOR_LINE, OnUpdateIndicatorLine)
+			ON_UPDATE_COMMAND_UI(ID_INDICATOR_TIME, OnUpdateIndicatorTime)
+			ON_UPDATE_COMMAND_UI(ID_INDICATOR_EDIT, OnUpdateIndicatorEdit)
+			ON_UPDATE_COMMAND_UI(ID_INDICATOR_FOLLOW, OnUpdateIndicatorFollow)
+			ON_UPDATE_COMMAND_UI(ID_INDICATOR_NOTEOFF, OnUpdateIndicatorNoteoff)
+			ON_UPDATE_COMMAND_UI(ID_INDICATOR_TWEAKS, OnUpdateIndicatorTweaks)
+			ON_UPDATE_COMMAND_UI(ID_INDICATOR_OCTAVE, OnUpdateIndicatorOctave)
 			ON_CBN_CLOSEUP(IDC_COMBOOCTAVE, OnCloseupCombooctave)
 			ON_CBN_SELCHANGE(IDC_COMBOOCTAVE, OnSelchangeCombooctave)
 			ON_WM_DROPFILES()
@@ -107,7 +107,6 @@ UNIVERSALIS__COMPILER__NAMESPACE__BEGIN(psycle)
 			ON_BN_CLICKED(IDC_LOADWAVE, OnLoadwave)
 			ON_MESSAGE (WM_SETMESSAGESTRING, OnSetMessageString)
 			ON_NOTIFY(NM_CUSTOMDRAW, IDC_MASTERSLIDER, OnCustomdrawMasterslider)
-			//}}AFX_MSG_MAP
 		END_MESSAGE_MAP()
 
 		static UINT indicators[] =
